--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый секс</title>
+    <title>Мой первый сайт</title>
 </head>
 <body>
-    <p>Это</p>
-    Просто<br>
-    Супер<br> 
+    <h1>Это мой первый сайт в интернете</h1>
 </body>
 </html>
